--- a/index.html
+++ b/index.html
@@ -23,6 +23,36 @@
             </nav>
         </div>
     </header>
-
+<div class="hero-section">
+    <div class="content-wrapper">
+        <h1>Make Your Amazing With Us</h1>
+        <p>Find best places to stay, eat with our local experts....</p>
+    </div>
+    <form action="">
+        <div class="search-item">
+            <div>Destination</div>
+            <input type="text" placeholder="Ex:Hostels, Tour, ....">
+        </div>
+        <div class="search-item">
+            <div>Check In</div>
+            <input type="Date" >
+        </div>
+        <div class="search-item">
+            <div>Check Out</div>
+            <input type="Date" >
+        </div>
+        <div class="search-item">
+            <div>Adults</div>
+            <input type="number" placeholder="No. of Adults">
+        </div>
+        <div class="search-item">
+            <div>Childern</div>
+            <input type="Number" placeholder="No. of Childern">
+        </div>
+        <div class="search-item">
+           <button class="search-btn"> Search </button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
