--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Rainbow</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <nav>
-        <div class="container">
-           <h1 class="logo"><img src="image/travel.png" alt="" height="60px"></h1> 
-           <div class="menu-icon">&#9776;</div>
-           <ul class="nav-list">    
+            <div class="container">
+                <h1 class="logo"><img src="image/travel.png" alt="" height="60px"></h1>
+                <div class="menu-icon">&#9776;</div>
+                <ul class="nav-list">
                     <li class="item">Home</li>
                     <li class="item">About</li>
                     <li class="item">Tour</li>
@@ -20,39 +22,69 @@
                     <li class="item">Servics</li>
                     <li class="item"> Feedback</li>
                 </ul>
-            </nav>
+        </nav>
         </div>
     </header>
-<div class="hero-section">
-    <div class="content-wrapper">
-        <h1>Make Your Amazing With Us</h1>
-        <p>Find best places to stay, eat with our local experts....</p>
+    <div class="hero-section">
+        <div class="content-wrapper">
+            <h1>Make Your Amazing With Us</h1>
+            <p>Find best places to stay, eat with our local experts....</p>
+        </div>
+        <form action="">
+            <div class="search-item">
+                <div>Destination</div>
+                <input type="text" placeholder="Ex:Hostels, Tour, ....">
+            </div>
+            <div class="search-item">
+                <div>Check In</div>
+                <input type="Date">
+            </div>
+            <div class="search-item">
+                <div>Check Out</div>
+                <input type="Date">
+            </div>
+            <div class="search-item">
+                <div>Adults</div>
+                <input type="number" placeholder="No. of Adults">
+            </div>
+            <div class="search-item">
+                <div>Childern</div>
+                <input type="Number" placeholder="No. of Childern">
+            </div>
+            <div class="search-item">
+                <button class="search-btn"> Search </button>
+            </div>
+        </form>
     </div>
-    <form action="">
-        <div class="search-item">
-            <div>Destination</div>
-            <input type="text" placeholder="Ex:Hostels, Tour, ....">
-        </div>
-        <div class="search-item">
-            <div>Check In</div>
-            <input type="Date" >
-        </div>
-        <div class="search-item">
-            <div>Check Out</div>
-            <input type="Date" >
-        </div>
-        <div class="search-item">
-            <div>Adults</div>
-            <input type="number" placeholder="No. of Adults">
-        </div>
-        <div class="search-item">
-            <div>Childern</div>
-            <input type="Number" placeholder="No. of Childern">
-        </div>
-        <div class="search-item">
-           <button class="search-btn"> Search </button>
-        </div>
-    </form>
-</div>
+    <section class="Servics">
+        <h5>TOP VALUE FOR YOU</h5>
+        <H1>What we offer?</H1>
+        <div class="row">
+            <div class="col"><img src ="./image/earth.jpg" alt="" height="60">
+                <h2>Lot of Choices</h2>
+                <p>At Travel Rainbow, we offer a diverse range of travel experiences tailored to all interests and
+                    preferences. From thrilling adventure tours and immersive cultural experiences to relaxing beach
+                    getaways and rejuvenating spa retreats, our options cater to every type of traveler. Enjoy
+                    family-friendly vacations, romantic escapes, and customized itineraries designed just for you.
+                    Whether you're looking for eco-friendly travel, exciting cruises, or unique group adventures, we
+                    provide the perfect solution to make your journey unforgettable. Explore the world with us and find
+                    the ideal travel experience that matches your dreams.</p>
+            </div>
+            <div class="col"><img src="" alt="">
+                <h2>Best Tour Guides</h2>
+                <p>At Travel Rainbow , our expert tour guides are dedicated to making your travel experience
+                    exceptional. With in-depth local knowledge, engaging storytelling, and a passion for sharing unique
+                    insights, our guides ensure you discover the hidden gems and rich cultural nuances of each
+                    destination. Whether you're exploring historic landmarks, vibrant neighborhoods, or breathtaking
+                    natural wonders, our friendly and professional guides provide personalized attention to make your
+                    journey memorable and enriching. Trust us to lead you on an unforgettable adventure with the best in
+                    the business.</p>
+            </div>
+            <div class="col"><img src="" alt="">
+                <h2>Easy Booking</h2>
+                <p>At Travel Rainbow, booking your next trip is quick and effortless. Our easy-to-use platform allows you to browse options, choose your preferred travel experience, and complete your reservation in just a few simple steps. With instant confirmations and dedicated support available around the clock, planning your adventure has never been smoother. Enjoy a seamless booking experience and get ready to explore with confidence.</p></div>
+
+            </section>
 </body>
+
 </html>
