--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h1>Make Your Amazing With Us</h1>
             <p>Find best places to stay, eat with our local experts....</p>
         </div>
+      
         <form action="">
             <div class="search-item">
                 <div>Destination</div>
@@ -85,6 +86,26 @@
                 <p>At Travel Rainbow, booking your next trip is quick and effortless. Our easy-to-use platform allows you to browse options, choose your preferred travel experience, and complete your reservation in just a few simple steps. With instant confirmations and dedicated support available around the clock, planning your adventure has never been smoother. Enjoy a seamless booking experience and get ready to explore with confidence.</p></div>
 
             </section>
-</body>
+            <div class="des">
+<section class="Servics destination">
+    <h5>SIMPLY AMAZING PLACES</h5>
+    <H1>Poular Destination</H1>
+    <div class="row">
+        <div class="destination-card"><img src ="./image/kerala.jfif" alt="" height="100" >
+            <h2>Lot of Choices</h2>
+            <p>Kerala is known as "God's Own Country," is a captivating destination in southern India, celebrated for its lush landscapes and rich cultural heritage. From the tranquil backwaters of Alleppey and Kumarakom to the scenic hill station of Munnar, Kerala offers a diverse range of experiences. Explore Kochi's colonial charm, unwind on Varkala's cliffs overlooking the Arabian Sea, and immerse yourself in traditional dance forms like Kathakali. Savor authentic Kerala cuisine, including the famed Sadya meal, and rejuvenate with Ayurvedic treatments. Whether cruising on a houseboat, trekking through spice plantations, or relaxing on pristine beaches, Kerala promises a unique and memorable travel experience.</p>
 
+                <a href="#">From &#8377;2000</a>
+        </div>
+        <div class="destination-card"><img src ="./image/goa.jpeg" alt="" height="100" >
+            <h2>Lot of Choices</h2>
+            <p>Goa is a vibrant state on India’s west coast known for its beautiful beaches and lively atmosphere. Popular spots include Baga and Anjuna Beaches, where you can enjoy the sun, sand, and beach parties. Old Goa offers historic churches and colorful Portuguese architecture. Panaji, the state capital, has charming streets and lively markets. For nature lovers, Dudhsagar Falls provides a stunning waterfall experience, while the spice plantations offer a glimpse into Goa’s rich agriculture. Whether you're looking for relaxation or adventure, Goa has something fun and exciting for everyone.</p>
+                <a href="#">From &#8377;5000</a>
+        </div>
+        <div class="destination-card"><img src ="./image/Kkashmir.avif" alt="" height="100" >
+            <h2>Lot of Choices</h2>
+             <p>Kashmir, often called "Paradise on Earth," is known for its breathtaking beauty and serene landscapes. Srinagar is famous for its houseboats and floating gardens on Dal Lake. Gulmarg offers stunning views and is perfect for skiing and gondola rides. Pahalgam is a peaceful spot with lush meadows and the starting point for the Amarnath Yatra pilgrimage. The beautiful gardens and historic sites in Shalimar and Nishat add to Kashmir's charm. Whether you want to explore nature, enjoy adventure sports, or simply relax, Kashmir is a magical destination with something for everyone.</p>
+            <a href="#">From &#8377;9000</a></div>
+        </section></div>
+</body>
 </html>
