--- a/index.html
+++ b/index.html
@@ -161,7 +161,16 @@
         </section>
     </div>
     <footer>
-        <p>Copyright &copy;2024 All Right Reserved | Travel Rainbow</p>
+        <p>Copyright &copy;2024 All Right Reserved | Travel Rainbow</p><br>
+<p> Email: <a href="mailto:rs5768827@gmail.com">rs5768827@gmail.com</a></p><br>
+<p><a href="https://www.instagram.com/_nitesh___17?igsh=MWpyNzFmZmxlOWlwbw==" target="_blank">
+    <img src="./image/insta.png" alt="Instagram" style="width: 25px; height: 25px;">
+</a>
+<a href="https://www.facebook.com/profile.php?id=100035206058373&mibextid=ZbWKwL" target="_blank">
+    <img src="./image/facebook.png" alt="Facebook" style="width: 30px; height: 28px;">
+</a>
+
+</p>
     </footer>
 </body>
 
