--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="container">
                 <h1 class="logo"><img src="image/travel.png" alt="" height="60px"></h1>
                 <div class="menu-icon">&#9776;</div>
+                <div class="lis">
                 <ul class="nav-list">
                     <li class="item"><a class="pad"href="./index.html">Home</a></li>
                     <li class="item"><a class="pad"href="./about.html">About</a></li>
@@ -22,7 +23,7 @@
                     <li class="item"><a class="pad" href="./servicrs.html">Servics</a></li>
                     <li class="item"> Feedback</li>
                 </ul>
-                
+            </div>
         </nav>
         </div>
     </header>
